terminus-ui/src/scss/helpers/_typography.scss
/*
 * NOTE: Adding the @nuclide annotation to any of these variables or maps causes Nucleus to break.
 * The error is in nucleus-styleguide/src/Transform.js line 57
 */

/**
 * The base typeface
 *
 * @nuclide
 * @section Typography
 */
$type__family--base: #{Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif} !default;

/**
 * The monospaced typeface family
 *
 * @nuclide
 * @section Typography
 */
$type__family--monospaced: #{'Lucida Console', Monaco, 'DejaVu Sans Mono', monospace} !default;

/**
 * The available typefaces
 *
 * @nuclide
 * @section Typography
 */
$typography-typefaces: (
  'primary': $type__family--base,
  'monospaced': $type__family--monospaced
);

/**
 * The base typography size
 *
 * @nuclide
 * @section Typography
 */
$type__size--base: 16px !default;

/**
 * The base typography weight
 *
 * @nuclide
 * @section Typography
 */
$type__weight--base: 300 !default;

/**
 * The available typography formats
 *
 * @nuclide
 * @section Typography
 */
$typography-formats: (
  'display',
  'headline',
  'title',
  'subhead',
  'body',
  'caption'
);

/**
 * The available typography levels for the `display` format
 *
 * @nuclide
 * @section Typography
 */
$typography-display-levels: (
  1,
  2,
  3,
  4
);

/**
 * The available typography levels for the `body` format
 *
 * @nuclide
 * @section Typography
 */
$typography-body-levels: (
  1,
  2
);


/**
 * Return typography styles based on the format and level
 *
 * @mixin typography
 * @section Style Helpers
 * @param $format
 *  One of the available formats defined within $typography-formats. Default: 'body'.
 * @param $level
 *  One of the accepted levels for the passed in format. Default: 1
 * @param $typeface
 *  One of the available typefaces defined in $typography-typefaces. Default: 'primary'
 * @example
 *  @include typography;
 *  @include typography(display, 4);
 */
@mixin typography($format: 'body', $level: 1, $typeface: 'primary') {
  // Verify the format is valid
  @if index($typography-formats, $format) == null {
    @error 'Invalid typography format: `#{$format}`. Allowed formats: #{$typography-formats}';
  }

  // Verify the typeface is valid
  @if not(map-has-key($typography-typefaces, $typeface)) {
    $allowed: map-keys($typography-typefaces);
    @error 'Invalid typography typeface: `#{$typeface}`. Allowed typefaces: #{$allowed}';
  } @else {
    font-family: map-get($typography-typefaces, $typeface);
  }


  // DISPLAY
  @if $format == 'display' {
    // Verify the level is valid for this format
    @if index($typography-display-levels, $level) == null {
      @error 'Invalid display format level: `#{$level}`. Allowed levels: #{$typography-display-levels}';
    }

    @if $level == 1 {
      font-size: 34px;
      font-weight: 500;
      line-height: 40px;
    }

    @if $level == 2 {
      font-size: 45px;
      font-weight: 500;
      line-height: 64px;
    }

    @if $level == 3 {
      font-size: 56px;
      font-weight: 500;
      letter-spacing: -.005em;
      line-height: 56px;
    }

    @if $level == 4 {
      font-size: 112px;
      font-weight: 300;
      letter-spacing: -.01em;
      line-height: 112px;
    }
  }


  // HEADLINE
  @if $format == 'headline' {
    font-size: 24px;
    font-weight: 500;
    line-height: 32px;
  }


  // TITLE
  @if $format == 'title' {
    font-size: 20px;
    font-weight: 500;
    letter-spacing: .005em;
  }


  // SUBHEAD
  @if $format == 'subhead' {
    font-size: 18px;
    font-weight: 500;
    letter-spacing: .01em;
    line-height: 24px;
  }


  // BODY
  @if $format == 'body' {
    font-size: 16px;
    letter-spacing: .01em;

    // Verify the level is valid for this format
    @if index($typography-body-levels, $level) == null {
      @error 'Invalid body format level: `#{$level}`. Allowed levels: #{$typography-body-levels}';
    }

    @if $level == 1 {
      font-weight: 300;

      // Don't apply custom line-height to buttons
      &:not(.c-button) {
        &:not(.c-input) {
          line-height: 20px;
        }
      }
    }

    @if $level == 2 {
      font-weight: 500;

      // Don't apply custom line-height to buttons
      &:not(.c-button) {
        line-height: 24px;
      }
    }
  }


  // CAPTION
  @if $format == 'caption' {
    font-size: 12px;
    letter-spacing: .02em;
  }
}

